web-ingestion/manifest/python-producer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pythonproducer
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: webevent.phexhub-np.int.bayer.com
    cert-manager.io/cluster-issuer: letsencrypt-production  # cluster issuer for certificate generation
spec:
  selector:
    app: app-pythonproducer
  ports:
  - name: http
    protocol: TCP
    port: 80  # Exposed port
    targetPort: 5000  # Container port
  type: ClusterIP  # Expose as ClusterIP
