web-ingestion/manifest/python-producer-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-pythonproducer
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
    nginx.ingress.kubernetes.io/ssl-certificate: "default/web-ingestion-tls"
    external-dns.alpha.kubernetes.io/hostname: webevent.phexhub-np.int.bayer.com
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: webevent.phexhub-np.int.bayer.com
    http:
      paths:
      - path: /app-pythonproducer-demo
        pathType: Prefix
        backend:
          service:
            name: app-pythonproducer
            port:
              number: 5000
  tls:
    - hosts:
      - webevent.phexhub-np.int.bayer.com
      secretName: web-ingestion-tls
